@@ -1,6 +1,10 @@
 function buildWindow(obj)
-    % Build the window for the prepare GUI. 
-   
+    % Build the window for the prepare GUI.
+    %
+    % i.e. this builds the "view"
+    %
+    % Rob Campbell SWC
+
     obj.hFig = BakingTray.gui.newGenericGUIFigureWindow('BakingTray_prepare');
 
     % Closing the figure closes the prepare_view object
@@ -8,13 +12,13 @@ function buildWindow(obj)
 
     %Resize the figure window
     pos=get(obj.hFig, 'Position');
-    pos(3:4)=[279,423];
+    pos(3:4)=[279,453];
     set(obj.hFig, ...
-        'Position',pos, ... 
+        'Position',pos, ...
         'Name', 'BakingTray - Prepare Sample')
     obj.positionNextToBakingTrayView;
 
-    %Set up default jog sizes for x/y and z 
+    %Set up default jog sizes for x/y and z
     %These are kept up to date with the updateJogProperies callback function
     obj.resetStepSizesToDefaults
 
@@ -29,8 +33,25 @@ function buildWindow(obj)
     doubleArrow = abs(doubleArrow-1);
     singleArrow = abs(singleArrow-1);
 
-    %Build move buttons in a panel
-    obj.move_panel = BakingTray.gui.newGenericGUIPanel([5,188,270,230], obj.hFig);
+
+    %Build "move" buttons in a panel
+    obj.move_panel = BakingTray.gui.newGenericGUIPanel([5,188,270,260], obj.hFig);
+
+    % Buttons to raise and lower the stage
+    obj.lowerZstage_button=uicontrol('Parent', obj.move_panel, ...
+        'Tag', 'lowerZstage', ...
+        'Position', [7,230,100,25], ...
+        'String', 'Lower Z stage', ...
+        'Callback', @(~,~) obj.model.lowerZstage, ...
+        'Enable', 'off');
+
+    obj.raiseSample_button=uicontrol('Parent', obj.move_panel, ...
+        'Tag', 'raiseSample', ...
+        'Position', [110,230,100,25], ...
+        'String', 'Raise sample', ...
+        'Callback', @(~,~) obj.model.raiseSample, ...
+        'Enable', 'off');
+
 
     buttonSize=[30,30];
     stepEditSize=[30,25];
@@ -38,22 +59,22 @@ function buildWindow(obj)
     % Buttons for X
     xButtonH=105; %positions X buttons along the height on the panel
     firstButtonX =7; %Pixel row position of first button
-    obj.largeStep.left=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.left=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||left', ...
         'Position', [firstButtonX xButtonH buttonSize], ...
         'CData', doubleArrow);
 
-    obj.smallStep.left=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.left=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||left', ...
         'Position', [firstButtonX+35 xButtonH buttonSize], ...
         'CData', singleArrow);
 
-    obj.smallStep.right=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.right=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||right', ...
         'Position', [firstButtonX+120 xButtonH buttonSize], ...
         'CData', fliplr(singleArrow));
 
-    obj.largeStep.right=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.right=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||right', ...
         'Position', [firstButtonX+155 xButtonH buttonSize], ...
         'CData', fliplr(doubleArrow));
@@ -61,29 +82,29 @@ function buildWindow(obj)
     % Buttons for Y
     yButtonR=85; %positions Y buttons along this pixel row
     firstButtonH=15; %Pixel of first button
-    obj.largeStep.away=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.away=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||away', ...
         'Position', [yButtonR firstButtonH+170 buttonSize], ...
         'CData', flipud(rot90(doubleArrow)));
 
-    obj.smallStep.away=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.away=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||away', ...
         'Position', [yButtonR firstButtonH+135 buttonSize], ...
         'CData', flipud(rot90(singleArrow)));
 
-    obj.smallStep.towards=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.towards=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||towards', ...
         'Position', [yButtonR firstButtonH+35 buttonSize], ...
         'CData', rot90(singleArrow));
 
-    obj.largeStep.towards=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.towards=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||towards', ...
         'Position', [yButtonR firstButtonH buttonSize], ...
         'CData', rot90(doubleArrow));
 
 
     %Step sizes for text boxes
-    obj.editBox.smallStepSizeXY=uicontrol('Parent', obj.move_panel, ... 
+    obj.editBox.smallStepSizeXY=uicontrol('Parent', obj.move_panel, ...
         'Position', [yButtonR firstButtonH+73 stepEditSize], ...
         'Style','edit', ...
         'Tag','XY||small', ...
@@ -91,7 +112,7 @@ function buildWindow(obj)
         'String',obj.xyJogSizes.small, ...
         'Callback',@obj.updateJogProperties);
 
-    obj.editBox.largeStepSizeXY=uicontrol('Parent', obj.move_panel, ... 
+    obj.editBox.largeStepSizeXY=uicontrol('Parent', obj.move_panel, ...
         'Position', [yButtonR firstButtonH+101 stepEditSize], ...
         'Style','edit', ...
         'Tag','XY||large', ...
@@ -102,28 +123,28 @@ function buildWindow(obj)
 
     % Buttons for Z
     zButtonR=225; %positions Z buttons along this pixel row
-    obj.largeStep.up=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.up=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||up', ...
         'Position', [zButtonR firstButtonH+170 buttonSize], ...
         'CData', flipud(rot90(doubleArrow)));
 
-    obj.smallStep.up=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.up=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||up', ...
         'Position', [zButtonR firstButtonH+135 buttonSize], ...
         'CData', flipud(rot90(singleArrow)));
 
-    obj.smallStep.down=uicontrol('Parent', obj.move_panel, ... 
+    obj.smallStep.down=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'small||down', ...
         'Position', [zButtonR firstButtonH+35 buttonSize], ...
         'CData', rot90(singleArrow));
 
-    obj.largeStep.down=uicontrol('Parent', obj.move_panel, ... 
+    obj.largeStep.down=uicontrol('Parent', obj.move_panel, ...
         'Tag', 'large||down', ...
         'Position', [zButtonR firstButtonH buttonSize], ...
         'CData', rot90(doubleArrow));
 
 
-    obj.editBox.smallStepSizeZ=uicontrol('Parent', obj.move_panel, ... 
+    obj.editBox.smallStepSizeZ=uicontrol('Parent', obj.move_panel, ...
         'Position', [zButtonR firstButtonH+73 stepEditSize], ...
         'Style','edit', ...
         'Tag','Z||small', ...
@@ -131,7 +152,7 @@ function buildWindow(obj)
         'String',obj.zJogSizes.small, ...
         'Callback',@obj.updateJogProperties);
 
-    obj.editBox.largeStepSizeZ=uicontrol('Parent', obj.move_panel, ... 
+    obj.editBox.largeStepSizeZ=uicontrol('Parent', obj.move_panel, ...
         'Position', [zButtonR firstButtonH+101 stepEditSize], ...
         'Style','edit', ...
         'Tag','Z||large', ...
@@ -143,7 +164,7 @@ function buildWindow(obj)
     %Add text entry boxes for absolute moves
     obj.absMove_panel = BakingTray.gui.newGenericGUIPanel([130,14,80,83], obj.move_panel);
 
-    buttonRowPos=25; 
+    buttonRowPos=25;
     absPosSize=[45,20];
     commonEditBoxProps={'Parent', obj.absMove_panel, 'Style','edit'};
 
@@ -182,7 +203,7 @@ function buildWindow(obj)
 
 
     %Stop motion button
-    obj.stopMotion_button=uicontrol('Parent', obj.move_panel, ... 
+    obj.stopMotion_button=uicontrol('Parent', obj.move_panel, ...
         'Position', [7,7,72,45], ...
         'String','STOP', ...
         'FontSize',obj.fSize+2, ...
@@ -198,7 +219,7 @@ function buildWindow(obj)
     % Lock Z-axes axes button. If a cutting position is set (it is not NaN) then
     % this is automatically locked so the user can not accidently move the Z
     % jack stage. When locked the buttons for Z are greyed out and the keyboard
-    % combos do not run. 
+    % combos do not run.
     obj.lockZ_checkbox = uicontrol('Parent',obj.move_panel, ...
         'Style','Checkbox', ...
         'Position', [1,70,75,19], ...
@@ -249,7 +270,7 @@ function buildWindow(obj)
 
 
     % ----------------------------
-    %The slice panel contains all things cutting related. 
+    %The slice panel contains all things cutting related.
     %The trim panel within it is for the buttons users press to take one or more slices
     obj.slice_panel = BakingTray.gui.newGenericGUIPanel([5,5,270,90], obj.hFig);
     sliceButtonCommon={'ForegroundColor','k','FontWeight', 'bold', ...
@@ -278,7 +299,7 @@ function buildWindow(obj)
         'String', 'Slice N times', ...
         'Callback', @obj.takeNslices);
 
-    obj.editBox.takeNslices = uicontrol('Parent', obj.trim_panel, ... 
+    obj.editBox.takeNslices = uicontrol('Parent', obj.trim_panel, ...
         'Position', [110, 25 25,20], ...
         'Style','edit', ...
         'TooltipString','Number of slices to change in succession', ...
@@ -288,8 +309,8 @@ function buildWindow(obj)
 
 
     % Slice speed and thickness
-    % These influence only what is done during preparation. The main view class that spawns the prepare 
-    % window sets each value to green if it matches that in the recipe. 
+    % These influence only what is done during preparation. The main view class that spawns the prepare
+    % window sets each value to green if it matches that in the recipe.
 
     %If the user has previously sliced, build GUI with these values instead
     if ~isempty(obj.model.recipe.lastSliceThickness)
@@ -335,7 +356,7 @@ function buildWindow(obj)
 
     % Add listeners on the three stage axes in order to update the stage position should the stage move.
     % So whenever the axis position is read, that axis will have its position updated on screen. If an
-    % axis is moved and the position is not read back, the screen won't update either, 
+    % axis is moved and the position is not read back, the screen won't update either,
     obj.listeners{end+1}=addlistener(obj.model.xAxis.attachedStage, 'currentPosition', 'PostSet', @obj.updateXaxisEditBox);
     obj.listeners{end+1}=addlistener(obj.model.yAxis.attachedStage, 'currentPosition', 'PostSet', @obj.updateYaxisEditBox);
     obj.listeners{end+1}=addlistener(obj.model.zAxis.attachedStage, 'currentPosition', 'PostSet', @obj.updateZaxisEditBox);
